--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "dev-portfolio-2025",
+  "name": "eleventy-tsx-template",
   "version": "0.0.1",
-  "description": "Development portfolio for Perry Angelora - 2025",
+  "description": "A minimal template to create static sites in .ts/.tsx with 11ty",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @11ty/eleventy",
-    "start": "npx @11ty/eleventy --serve --incremental"
+    "build:scripts": "node esbuild.config.mjs",
+    "start": "npm run build:scripts && tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts --serve --incremental --watch",
+    "build": "npm run build:scripts && tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts"
   },
-  "keywords": [
-    "Development",
-    "portfolio"
-  ],
-  "author": "Perry Angelora <perry.angelora@gmail.com>",
   "type": "module",
   "license": "MIT",
-  "dependencies": {
-    "@11ty/eleventy": "^3.0.0"
+  "devDependencies": {
+    "@11ty/eleventy": "^3.0.1-alpha.3",
+    "@types/node": "^22.10.10",
+    "@types/react-dom": "^19.0.3",
+    "esbuild": "^0.24.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sass": "^1.83.4",
+    "tsx": "^4.19.2",
+    "glob": "^11.0.1"
   }
 }
