--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "description": "A minimal template to create static sites in .ts/.tsx with 11ty",
   "main": "index.js",
   "scripts": {
-    "build:scripts": "node esbuild.config.mjs",
-    "start": "npm run build:scripts && tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts --serve --incremental --watch",
-    "build": "npm run build:scripts && tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts"
+    "start:scripts": "NODE_ENV='development' node esbuild.config.mjs",
+    "build:scripts": "NODE_ENV='production' node esbuild.config.mjs",
+    "start": "tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts --serve --incremental --watch",
+    "build": "tsx node_modules/@11ty/eleventy/cmd.cjs --config=eleventy.config.ts"
   },
   "type": "module",
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^3.0.1-alpha.3",
+    "@types/common-tags": "^1.8.4",
     "@types/node": "^22.10.10",
     "@types/react-dom": "^19.0.3",
     "esbuild": "^0.24.2",
+    "glob": "^11.0.1",
+    "image-size": "^1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.83.4",
-    "tsx": "^4.19.2",
-    "glob": "^11.0.1"
+    "sharp": "^0.33.5",
+    "tsx": "^4.19.2"
   }
 }
