--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^3.0.1-alpha.3",
+    "@barba/core": "^2.10.3",
+    "@barba/css": "^2.1.16",
     "@types/common-tags": "^1.8.4",
     "@types/node": "^22.10.10",
     "@types/react-dom": "^19.0.3",
-    "esbuild": "^0.24.2",
+    "esbuild": "^0.25.0",
     "glob": "^11.0.1",
     "image-size": "^1.2.0",
     "react": "^19.0.0",
